working graphics and opcodes

--- a/Chip8-Interpreter/Chip8-Interpreter.vcxproj.filters
+++ b/Chip8-Interpreter/Chip8-Interpreter.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="cpu.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="chip8.h">
@@ -26,5 +29,8 @@
     <ClInclude Include="cpu.hh">
       <Filter>Source Files</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\.gitignore" />
   </ItemGroup>
 </Project>
